--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,5 +25,5 @@ python-lsp-server = "^1.2.1"
 Sphinx = "^4.1.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", 'setuptools', 'wheel']
 build-backend = "poetry.core.masonry.api"
